# MRPNN

./: .gitignore  CMakeLists.txt  README.md  main.cu  test.cu
core/: GUI.hpp  camera.hpp  render.cuh  volume.cu
